--- a/src/app/hero-details/hero-detail.component.html
+++ b/src/app/hero-details/hero-detail.component.html
@@ -6,4 +6,5 @@
         <input id="hero-name" [(ngModel)]="hero.name" placeholder="name">
     </div>
     <button type="button" (click)="goBack()">back</button>
+    <button type="button" (click)="save()">save</button>
 </div>
